# MVAE

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mvae_mnist/: __init__.py  cli.py  config.py  data.py  eval.py  eval_utils.py  model.py  sample.py  train.py  utils.py
tests/: test_cli.py  test_conditioning.py  test_data.py  test_model.py  test_training.py
